--- a/components/src/global/global.scss
+++ b/components/src/global/global.scss
@@ -32,6 +32,7 @@
   --ldf-subtitle-font-weight: normal;
   --ldf-subtitle-font-variant: normal;
   --ldf-subtitle-font-size: 1em;
+  --ldf-subtitle-text-align: center;
 
   /* Response styling */
   --ldf-response-font-weight: bold;
